--- a/css/dssc.css
+++ b/css/dssc.css
@@ -25,16 +25,19 @@ body {
 	font-style: italic;
 }
 
+#uploadWrapper {
+	padding: 0 40px;
+}
+
 #uploader {
-	margin-top: 100px;
-	padding-top: 80px;
-	text-align: center;
-	border-radius: 15px;
-	background: #60575e;
-	width: 400px;
-	height: 350px;
-	border: 2px dashed #000;
-	font-size: 24px;
+    text-align: center;
+    border-radius: 5px;
+    background: rgb(33, 37, 41);
+    width: 100%;
+    height: 80px;
+    font-size: 24px;
+    margin: 50px auto 0;
+    line-height: 75px;
 }
 
 #uploader.highlight {
@@ -50,4 +53,51 @@ input::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+.spinner {
+	display: inline-block;
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 2000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: spin;
+    -moz-animation-duration: 2000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -ms-animation-name: spin;
+    -ms-animation-duration: 2000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+
+    animation-name: spin;
+    animation-duration: 2000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@-ms-keyframes spin {
+	from { -ms-transform: rotate(0deg); }
+	to { -ms-transform: rotate(360deg); }
+}
+
+@-moz-keyframes spin {
+	from { -moz-transform: rotate(0deg); }
+	to { -moz-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes spin {
+	from { -webkit-transform: rotate(0deg); }
+	to { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+	from {
+	    transform:rotate(0deg);
+	}
+	to {
+	    transform:rotate(360deg);
+	}
 }
