--- a/css/dssc.css
+++ b/css/dssc.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-body {
+html, body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #170c14;
 	color: #fff;
@@ -38,6 +38,7 @@ body {
     font-size: 24px;
     margin: 50px auto 0;
     line-height: 75px;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
 }
 
 #uploader.highlight {
