--- a/css/dssc.css
+++ b/css/dssc.css
@@ -4,6 +4,82 @@ html, body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #170c14;
 	color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+@-ms-keyframes spinner {
+    from { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg); }
+}
+
+@-moz-keyframes spinner {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes spinner {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spinner {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+body.highlight:after {
+    display: block;
+    content: 'Drop file to upload';
+    font-size: 50px;
+    text-align: center;
+    background: rgb(6, 6, 6);
+    margin: 0 auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    padding: 30px;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.6);
+}
+
+body.loading:before {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #ccc;
+    border-top-color: #333;
+    animation: spinner .6s linear infinite;
+    z-index: 1000000;
+    margin-left: -150px;
+    margin-top: -15px;
+    border-radius: 30px;
+}
+
+body.loading:after {
+    display: block;
+    content: 'Loading';
+    font-size: 50px;
+    text-align: center;
+    background: rgb(6, 6, 6);
+    margin: 0 auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    padding: 30px;
+    width: 500px;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.6);
 }
 
 .uploads {
