--- a/css/dssc.css
+++ b/css/dssc.css
@@ -82,8 +82,8 @@ body.loading:after {
     box-shadow: 0 0 30px rgba(0,0,0,0.6);
 }
 
-a { color: #7cc501; }
-a:hover { color: #5c9201; text-decoration: none;}
+a { color: #e83e8c; }
+a:hover { color: #c81768; text-decoration: none;}
 
 .uploads {
 	font-size: 16px;
