--- a/css/dssc.css
+++ b/css/dssc.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Courier+Prime&display=swap');
 
 :root {
     /* --colorLink: #24CAA1; */
@@ -14,6 +16,7 @@
     --colorDark: #1B1E2B;
     --colorText: #F2F2F2;
     --colorDetails: #637082;
+    --colorLine: #0e0f16;
 
     --fontThin: 100;
     --fontExtraLight: 200;
@@ -172,15 +175,14 @@ a:hover { color: var(--colorLink); text-decoration: none;}
     right: 0px;
     text-align: center;
     background: var(--colorDark);
-    /* padding: 5px 0 5px 0; */
-
+    border-top: 1px solid var(--colorLine);
     display: flex;
     justify-content: space-between;
-    padding: 5px 20px;
+    padding: 5px 10px 5px 10px;
     z-index: 1000000;
 }
 .footer p {
-    font-size: 12px;
+    font-size: 11px;
     font-weight: bold;
     margin: 0;
 }
@@ -194,7 +196,6 @@ a:hover { color: var(--colorLink); text-decoration: none;}
 }
 
 .cookies {
-    font-size: 10px;
     font-weight: var(--fontMedium);
     color: var(--colorDetails);
     /*color: #8a8a8a;*/
